Add Create Relay Channel Function
